# bagsakan

./: .gitignore  .npmignore  Cargo.toml  bagsakan.example.toml  bagsakan.toml  package.json  pnpm-lock.yaml  readme.md
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: install.js
src/: config.rs  generator.rs  main.rs  parser.rs
test_src/: bagsakan.toml  check-imports.sh  class-arrow-test.ts  debug-imports.js  enum-test.ts  external-import-test.ts  models.ts  package-subpath-test.ts  package.json  pattern-test.ts  pnpm-lock.yaml  test-missing-validators.ts  test-validators.ts  usage-example.ts  user-messaging-types-test.ts
