[package]
name = "bagsakan"
version = "0.1.3"
edition = "2021"
description = "A Rust-based utility to generate typescript validator functions from typescript type definitions"
license = "MIT"
authors = ["insidewhy <github@chilon.net>"]
keywords = ["types", "type-validator"]
categories = ["command-line-utilities"]
repository = "https://github.com/insidewhy/bagsakan"
readme = "readme.md"

[dependencies]
oxc_parser = "0.78.0"
oxc_ast = "0.78.0"
oxc_allocator = "0.78.0"
oxc_span = "0.78.0"
oxc_syntax = "0.78.0"
oxc_traverse = "0.78.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
regex = "1.10"
clap = { version = "4", features = ["derive"] }
pathdiff = "0.2"
